--- a/configure.ac
+++ b/configure.ac
@@ -33,11 +33,6 @@ PKG_CHECK_MODULES(GTK, $GTK_MODULES)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-GCONF_MODULES="gconf-2.0 >= 2.0.0"
-PKG_CHECK_MODULES(GCONF, $GCONF_MODULES)
-AC_SUBST(GCONF_CFLAGS)
-AC_SUBST(GCONF_LIBS)
-
 GIT_MODULES="gnome-icon-theme >= 2.18.0"
 PKG_CHECK_MODULES(GIT, $GIT_MODULES)
 AC_SUBST(GIT_CFLAGS)
@@ -52,6 +47,10 @@ UNIQUE_MODULES="unique-3.0 >= 2.91"
 PKG_CHECK_MODULES(UNIQUE, $UNIQUE_MODULES)
 AC_SUBST(UNIQUE_CFLAGS)
 AC_SUBST(UNIQUE_LIBS)
+
+# Needed for the monospace font name.
+GDS_MODULES="gsettings-desktop-schemas"
+PKG_CHECK_MODULES(GSETTINGS_DESKTOP_SCHEMAS, $GDS_MODULES)
 
 # --with-dbus=[yes|no]
 DBUS_CFLAGS=
@@ -168,7 +167,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 
 # Miscellaneous
-AM_GCONF_SOURCE_2
+GLIB_GSETTINGS
 GTK_DOC_CHECK(1.6)
 GNOME_DOC_INIT
 
