--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -5,29 +5,27 @@ desktop_in_files = gnome-video-arcade.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-schemadir = @GCONF_SCHEMA_FILE_DIR@
-schema_DATA = gnome-video-arcade.schemas
+gsettingsschema_in_files = org.gnome.VideoArcade.gschema.xml.in
+gsettings_SCHEMAS = $(gsettingsschema_in_files:.xml.in=.xml)
+@INTLTOOL_XML_NOMERGE_RULE@
+@GSETTINGS_RULES@
+
+gsettingsconvertdir = $(datadir)/GConf/gsettings
+gsettingsconvert_DATA = gnome-video-arcade.convert
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = gnome-video-arcade.svg
-
-gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
 uidir = $(datadir)/gnome-video-arcade
 ui_DATA = \
 	gnome-video-arcade.builder	\
 	gnome-video-arcade.ui
 
-if GCONF_SCHEMAS_INSTALL
-install-data-local:
-	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
-	$(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
-else
-install-data-local:
-endif
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
 install-data-hook: update-icon-cache
 uninstall-hook: update-icon-cache
+
 update-icon-cache:
 	@-if test -z "$(DESTDIR)"; then \
 		echo "Updating Gtk icon cache."; \
@@ -38,13 +36,15 @@ update-icon-cache:
 	fi
 
 EXTRA_DIST = \
-	$(schema_DATA)			\
+	$(desktop_in_files)		\
+	$(gsettingsschema_in_files)	\
 	$(svgicon_DATA)			\
 	$(ui_DATA)			\
-	gnome-video-arcade.desktop.in
+	gnome-video-arcade.convert
 
 DISTCLEANFILES = \
-	$(desktop_DATA)
+	$(desktop_DATA)			\
+	$(gsettings_SCHEMAS)
 
 MAINTAINERCLEANFILES = \
 	gnome-video-arcade.builder.bak
