Migrate from UniqueApp to GtkApplication.
Drop our dependency on unique-3.0.

--- a/maint/Makefile.am
+++ b/maint/Makefile.am
@@ -12,8 +12,7 @@ gladegva_LTLIBRARIES = libgladegva.la
 gladegvadir = `$(PKG_CONFIG) --variable=moduledir gladeui-1.0`
 
 libgladegva_la_CFLAGS = \
-	@GLIB_CFLAGS@ @GTK_CFLAGS@ \
-	@GSTREAMER_CFLAGS@ @UNIQUE_CFLAGS@
+	@GLIB_CFLAGS@ @GTK_CFLAGS@ @GSTREAMER_CFLAGS@
 
 libgladegva_la_SOURCES = \
 	$(top_srcdir)/src/gva-column-manager.c \
@@ -24,8 +23,7 @@ libgladegva_la_LDFLAGS = \
 	-module -avoid-version
 
 libgladegva_la_LIBADD = \
-	@GLIB_LIBS@ @GTK_LIBS@ \
-	@GSTREAMER_LIBS@ @UNIQUE_LIBS@
+	@GLIB_LIBS@ @GTK_LIBS@ @GSTREAMER_LIBS@
 
 EXTRA_DIST = \
 	$(gladecatalog_DATA) \
