--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,9 +4,8 @@ bin_PROGRAMS = gnome-video-arcade
 
 AM_CFLAGS = \
 	-Wall \
-	@DBUS_CFLAGS@ @GLIB_CFLAGS@ @GTK_CFLAGS@ \
-	@GIT_CFLAGS@ @GSTREAMER_CFLAGS@ @SQLITE_CFLAGS@ \
-	@UNIQUE_CFLAGS@ @WNCK_CFLAGS@
+	@DBUS_CFLAGS@ @GLIB_CFLAGS@ @GTK_CFLAGS@ @GIT_CFLAGS@ \
+	@GSTREAMER_CFLAGS@ @SQLITE_CFLAGS@ @WNCK_CFLAGS@
 
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gva\" \
@@ -87,7 +86,7 @@ EXTRA_gnome_video_arcade_SOURCES = \
 gnome_video_arcade_LDADD = \
 	@DBUS_LIBS@ @GLIB_LIBS@ @GTK_LIBS@ \
 	@GIT_LIBS@ @GSTREAMER_LIBS@ @MAME_BACKEND@ \
-	@SQLITE_LIBS@ @UNIQUE_LIBS@ @WNCK_LIBS@
+	@SQLITE_LIBS@ @WNCK_LIBS@
 
 gnome_video_arcade_DEPENDENCIES = \
 	@MAME_BACKEND@
