--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ bin_PROGRAMS = gnome-video-arcade
 
 AM_CFLAGS = \
 	-Wall \
-	@DBUS_CFLAGS@ @GLIB_CFLAGS@ @GTK_CFLAGS@ @GIT_CFLAGS@ \
+	@GLIB_CFLAGS@ @GTK_CFLAGS@ @GIT_CFLAGS@ \
 	@GSTREAMER_CFLAGS@ @SQLITE_CFLAGS@ @WNCK_CFLAGS@
 
 AM_CPPFLAGS = \
@@ -14,12 +14,6 @@ AM_CPPFLAGS = \
 
 AM_LDFLAGS = \
 	-export-dynamic
-
-if HAVE_DBUS
-DBUS_SOURCES = \
-	gva-dbus.c			\
-	gva-dbus.h
-endif
 
 gnome_video_arcade_SOURCES = \
 	gva-audit.c			\
@@ -64,8 +58,10 @@ gnome_video_arcade_SOURCES = \
 	gva-preferences.h		\
 	gva-process.c			\
 	gva-process.h			\
-	gva-properties.h		\
 	gva-properties.c		\
+	gva-properties.h		\
+	gva-screen-saver.c		\
+	gva-screen-saver.h		\
 	gva-time.c			\
 	gva-time.h			\
 	gva-tree-view.c			\
@@ -76,7 +72,6 @@ gnome_video_arcade_SOURCES = \
 	gva-util.h			\
 	gva-wnck.c			\
 	gva-wnck.h			\
-	$(DBUS_SOURCES)			\
 	main.c
 
 EXTRA_gnome_video_arcade_SOURCES = \
@@ -84,8 +79,8 @@ EXTRA_gnome_video_arcade_SOURCES = \
 	gva-mame-xmame.c
 
 gnome_video_arcade_LDADD = \
-	@DBUS_LIBS@ @GLIB_LIBS@ @GTK_LIBS@ \
-	@GIT_LIBS@ @GSTREAMER_LIBS@ @MAME_BACKEND@ \
+	@GLIB_LIBS@ @GTK_LIBS@ @GIT_LIBS@ \
+	@GSTREAMER_LIBS@ @MAME_BACKEND@ \
 	@SQLITE_LIBS@ @WNCK_LIBS@
 
 gnome_video_arcade_DEPENDENCIES = \
