Add a dependency on libsoup.
We'll use libsoup to download images off the web.

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,11 @@ PKG_CHECK_MODULES(GIT, $GIT_MODULES)
 AC_SUBST(GIT_CFLAGS)
 AC_SUBST(GIT_LIBS)
 
+SOUP_MODULES="libsoup-2.4 >= 2.4.0"
+PKG_CHECK_MODULES(SOUP, $SOUP_MODULES)
+AC_SUBST(SOUP_CFLAGS)
+AC_SUBST(SOUP_LIBS)
+
 SQLITE_MODULES="sqlite3 >= 3.0.0"
 PKG_CHECK_MODULES(SQLITE, $SQLITE_MODULES)
 AC_SUBST(SQLITE_CFLAGS)
