--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,8 +4,8 @@ bin_PROGRAMS = gnome-video-arcade
 
 AM_CFLAGS = \
 	-Wall \
-	@GLIB_CFLAGS@ @GTK_CFLAGS@ @GIT_CFLAGS@ \
-	@GSTREAMER_CFLAGS@ @SQLITE_CFLAGS@ @WNCK_CFLAGS@
+	@GLIB_CFLAGS@ @GTK_CFLAGS@ @GIT_CFLAGS@ @GSTREAMER_CFLAGS@ \
+	@SOUP_CFLAGS@ @SQLITE_CFLAGS@ @WNCK_CFLAGS@
 
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gva\" \
@@ -81,7 +81,7 @@ EXTRA_gnome_video_arcade_SOURCES = \
 gnome_video_arcade_LDADD = \
 	@GLIB_LIBS@ @GTK_LIBS@ @GIT_LIBS@ \
 	@GSTREAMER_LIBS@ @MAME_BACKEND@ \
-	@SQLITE_LIBS@ @WNCK_LIBS@
+	@SOUP_LIBS@ @SQLITE_LIBS@ @WNCK_LIBS@
 
 gnome_video_arcade_DEPENDENCIES = \
 	@MAME_BACKEND@
