--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ AC_CONFIG_MACRO_DIR(m4)
 AC_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR(src/main.c)
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([1.11 no-dist-gzip dist-xz])
 AM_MAINTAINER_MODE
 
 GVA_VERSION=gva_version
