--- a/configure.ac
+++ b/configure.ac
@@ -149,7 +149,7 @@ AM_GLIB_GNU_GETTEXT
 # Miscellaneous
 GLIB_GSETTINGS
 GTK_DOC_CHECK(1.6)
-GNOME_DOC_INIT
+YELP_HELP_INIT
 
 # Optional Features
 
