--- a/maint/Makefile.am
+++ b/maint/Makefile.am
@@ -14,18 +14,17 @@ gladegvadir = `$(PKG_CONFIG) --variable=moduledir gladeui-2.0`
 libgladegva_la_CPPFLAGS = $(DEP_CPPFLAGS)
 
 libgladegva_la_CFLAGS = \
-	@GLIB_CFLAGS@ @GTK_CFLAGS@ @GSTREAMER_CFLAGS@ @SOUP_CFLAGS@
+	@GLIB_CFLAGS@ @GTK_CFLAGS@ @SOUP_CFLAGS@
 
 libgladegva_la_SOURCES = \
 	$(top_srcdir)/src/gva-column-manager.c \
-	$(top_srcdir)/src/gva-music-button.c \
 	$(top_srcdir)/src/gva-mute-button.c
 
 libgladegva_la_LDFLAGS = \
 	-module -avoid-version
 
 libgladegva_la_LIBADD = \
-	@GLIB_LIBS@ @GTK_LIBS@ @GSTREAMER_LIBS@ @SOUP_LIBS@
+	@GLIB_LIBS@ @GTK_LIBS@ @SOUP_LIBS@
 
 EXTRA_DIST = \
 	$(gladecatalog_DATA) \
