--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -93,7 +93,7 @@ GTKDOC_LIBS=							\
 	$(top_builddir)/src/gva-history.o			\
 	$(top_builddir)/src/gva-input-file.o			\
 	$(top_builddir)/src/gva-main.o				\
-	$(top_builddir)/src/gva-mame-common.o			\
+	$(top_builddir)/src/gva-mame.o				\
 	$(top_builddir)/src/gva-mame-process.o			\
 	$(top_builddir)/src/gva-mute-button.o			\
 	$(top_builddir)/src/gva-nplayers.o			\
@@ -107,7 +107,6 @@ GTKDOC_LIBS=							\
 	$(top_builddir)/src/gva-ui.o				\
 	$(top_builddir)/src/gva-util.o				\
 	$(top_builddir)/src/gva-wnck.o				\
-	$(top_builddir)/src/@MAME_BACKEND@			\
 	$(GLIB_LIBS)						\
 	$(GTK_LIBS)						\
 	$(SOUP_LIBS)						\
