docs: Update man page and doap description
Both are now consistent with the README file.

https://bugzilla.gnome.org/754240

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -4,6 +4,12 @@ SUBDIRS = reference
 
 man_MANS = gnome-video-arcade.1
 
-EXTRA_DIST = $(man_MANS)
+gnome-video-arcade.1: gnome-video-arcade.1.in
+	$(AM_V_GEN) sed -e "s|[@]TIMESTAMP[@]|$(shell date '+%B %Y')|" \
+	< $< > $@.tmp && mv $@.tmp $@
+
+EXTRA_DIST = gnome-video-arcade.1.in
+
+CLEANFILES = $(man_MANS)
 
 -include $(top_srcdir)/git.mk
